--- a/my-profile/my-hobbies.html
+++ b/my-profile/my-hobbies.html
@@ -19,6 +19,14 @@
      
     <h3 id="myhobbies">My hobbies</h3>
     <div>
+        <p class="">
+            <span>
+                I enjoy hiking and I also love to swim.
+                In my free time I love to read    
+            </span>
+        
+
+        </p>
 
     </div>
 
