--- a/my-profile/my-skills.html
+++ b/my-profile/my-skills.html
@@ -26,20 +26,20 @@
         </p>
         <a href="skills.html"> Click here to find out more about my skills</a>
         <img class="image" src="images/image8.jpg">
-        <h3 class="skills">
+        <p class="skills">
             Coding: I am learning html and javascript 
             in my coding classes I really enjoy it
             I can code simple websites.
-        </h3>
+        </p>
         <img class="image" src="images/image6.jpg">
 
-        <h3 class="skills">
+        <p class="skills">
            
             Baking: I am good at baking. 
             I love to bake with my dad
             we make brownies and cupcakes togather.  
             
-        </h3>
+        </p>
         <img class="image" src="images/image7.jpg">
 
     </div>
