--- a/my-profile/my-skills.html
+++ b/my-profile/my-skills.html
@@ -24,8 +24,14 @@
             <strong> My skills :  I am good at baking, I like dancing and I enjoy coding.
             I'm also really good at reading and mathamatics.</strong>
         </p>
-        <a href="skills.html"> Click here to find out more about my skills</a>
-        <img class="image" src="images/image8.jpg">
+        <a href="skills.html" class="skills">Click here to find out more about my skills</a>
+        <span>
+            <img class="image" src="images/image8.jpg">
+            <img class="image" src="images/image10.jpg">
+           
+
+        </span>
+       
         <p class="skills">
             Coding: I am learning html and javascript 
             in my coding classes I really enjoy it
