--- a/my-profile/html/index.html
+++ b/my-profile/html/index.html
@@ -25,12 +25,18 @@
       <br>
       <br>
       <p1 class="paragraph">Here are some things that I like:</p1>
+
       <div>
+        <p id="picture">Click on a picture to find out more about it</p>
+        <img class="image" src="images/image11.jpg" title="Me, my mother and my brother" >
+        <img class="image" src="images/image12.jpg" title="Me as a baby">
         <img class="image" src="images/image3.jpg" title="ocean">
         <img class="image" src="images/image4.jpg" title="dog">
         <img class="image" src="images/image5.jpg" title="library" >
+       
 
       </div>
+
 
 
   </div>
