--- a/my-profile/my-hobbies.html
+++ b/my-profile/my-hobbies.html
@@ -17,9 +17,9 @@
         <a href="skills.html">More about my skills</a>
     </nav>
      
-    <h2 id="myhobbies">My hobbies</h2>
+    <h2 id="hobbie">My hobbies</h2>
     <div>
-        <p class="skills">
+        <p id="hobbies">
                 <strong>
                I enjoy hiking and coding  I also love to swim.
                In my free time I love to read and dance.  
