--- a/my-profile/my-skills.html
+++ b/my-profile/my-skills.html
@@ -21,7 +21,7 @@
     <div>
         <p id="writing">
 
-            <strong> My skills : I am good at baking, I like dancing and I enjoy coding.
+            <strong> Skills : I am good at baking, I like dancing and I enjoy coding.
                 I'm also really good at reading and mathamatics.</strong>
         </p>
         <a href="skills.html" class="skills">Click here to find out more about my skills</a>
