--- a/my-profile/index.html
+++ b/my-profile/index.html
@@ -31,8 +31,12 @@
       <a href="photo-pages/photo1.html" target="_blank">
         <img class="image" src="images/image11.jpg" title="Me, my mother and my brother">
       </a>
+      <a href="photo-pages/photo2.html" target="_blank">
       <img class="image" src="images/image12.jpg" title="Me as a baby">
+      </a>
+      <a href="photo-pages/photo3.html" target="_blank">
       <img class="image" src="images/image3.jpg" title="ocean">
+      </a>
       <img class="image" src="images/image4.jpg" title="dog">
       <img class="image" src="images/image5.jpg" title="library">
 
