--- a/my-profile/index.html
+++ b/my-profile/index.html
@@ -11,12 +11,12 @@
 
 
 
-  <nav>
+  <nav>    
     <a href="index.html">Home</a>
     <a href="my-skills.html">My skills</a>
     <a href="my-hobbies.html">My hobbies</a>
-    <a href="skills.html">More about my skills</a>
-  </nav>
+</nav>  
+
 
   <div>
     <h3 id="me"> About me</h3>
@@ -28,13 +28,13 @@
 
     <div>
       <p id="picture">Click on a picture to find out more about it</p>
-      <a href="photo-pages/photo1.html" target="_blank">
+      <a href="photo1.html" target="_blank">
         <img class="image" src="images/image11.jpg" title="Me, my mother and my brother">
       </a>
-      <a href="photo-pages/photo2.html" target="_blank">
+      <a href="photo2.html" target="_blank">
       <img class="image" src="images/image12.jpg" title="Me as a baby">
       </a>
-      <a href="photo-pages/photo3.html" target="_blank">
+      <a href="photo3.html" target="_blank">
       <img class="image" src="images/image3.jpg" title="ocean">
       </a>
       <img class="image" src="images/image4.jpg" title="dog">
