--- a/my-profile/photo1.html
+++ b/my-profile/photo1.html
@@ -1,18 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>my skills</title>
+    <title>Photo 1</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-    <h1 class="heading">All About Me</h1>
     <nav>    
         <a href="index.html">Home</a>
         <a href="my-skills.html">My skills</a>
         <a href="my-hobbies.html">My hobbies</a>
 
     </nav>  
+
+    <h2 class="p1" > Photo 1: </h2> 
+
+    <img  class="images" src="images/image11.jpg">
+
+     <p class="p1">
+     <strong>
+    This is a photo of me,my brother and my mother.
+    We are at a water fall. This photo was taken by my dad 
+    sometime in 2023. 
+
+     </strong>
+    </p> 
+</body>
+</html>
