changes made by me

--- a/my-profile/index.html
+++ b/my-profile/index.html
@@ -37,7 +37,9 @@
       <a href="photo3.html" target="_blank">
       <img class="image" src="images/image3.jpg" title="ocean">
       </a>
+      <a href="photo4.html" target="_blank">
       <img class="image" src="images/image4.jpg" title="dog">
+      </a>
       <img class="image" src="images/image5.jpg" title="library">
 
 
