--- a/my-profile/photo2.html
+++ b/my-profile/photo2.html
@@ -4,8 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Photo 2</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <nav>    
+        <a href="index.html">Home</a>
+        <a href="my-skills.html">My skills</a>
+        <a href="my-hobbies.html">My hobbies</a>
+
+    </nav>  
+
+    <h2 class="p1" > Photo 2: </h2> 
+
+    <img  class="images" src="images/image12.jpg">
+
+     <p class="p1">
+     <strong>
+    This is a photo of me when I was a baby.
+    I have no idea when this photo was taken.
+
+     </strong>
+    </p> 
 </body>
 </html>
