--- a/my-profile/photo4.html
+++ b/my-profile/photo4.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Photo 3</title>
+    <title>Photo 4</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -14,16 +14,15 @@
 
     </nav>  
 
-    <h2 class="p1" > Photo 3: </h2> 
+    <h2 class="p1" > Photo 4: </h2> 
 
-    <img  class="images" src="images/image3.jpg">
+    <img  class="images" src="images/image4.jpg">
 
      <p class="p1">
      <strong>
-    This is a photo of the ocean.
-    It shows how much I love the ocean.
-    I love sweimming and snorkerling in the ocean.
-    I do not when this photo was taken. 
+    This is a photo of a dog.
+    This shows that I like dogs they are my secod favourite animal after an owl.
+    I do not know when this photo was taken.
 
      </strong>
     </p> 
