--- a/my-profile/index.html
+++ b/my-profile/index.html
@@ -40,7 +40,10 @@
       <a href="photo4.html" target="_blank">
       <img class="image" src="images/image4.jpg" title="dog">
       </a>
-      <img class="image" src="images/image5.jpg" title="library">
+      <a href="photo5.html" target="_blank">
+        <img class="image" src="images/image5.jpg" title="library">
+      </a>
+      
 
 
     </div>
