--- a/my-profile/photo7.html
+++ b/my-profile/photo7.html
@@ -1,18 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>my skills</title>
+    <title>Photo 2</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-    <h1 class="heading">All About Me</h1>
     <nav>    
         <a href="index.html">Home</a>
         <a href="my-skills.html">My skills</a>
         <a href="my-hobbies.html">My hobbies</a>
 
     </nav>  
+
+    <h2 class="p1" > Photo 2: </h2> 
+
+    <img  class="images" src="images/image14 (1).jpg">
+
+     <p class="p1">
+     <strong>
+      Rock climbing is something i like to do for fun I love 
+      rock climbing and I think that I am  pretty good at it. 
+     </strong>
+    </p> 
+</body>
+</html>
