--- a/my-profile/photo8.html
+++ b/my-profile/photo8.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Photo 5</title>
+    <title>Photo 3</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -14,16 +14,14 @@
 
     </nav>  
 
-    <h2 class="p1" > Photo 5: </h2> 
+    <h2 class="p1" > Photo 3: </h2> 
 
-    <img  class="images" src="images/image5.jpg">
+    <img  class="images" src="images/image 15.jpg">
 
      <p class="p1">
      <strong>
-        This is the photo of the library.
-        I have chosen this photo beacause it 
-        repreasents the fact that I love to read. 
-        I have no idea when this photo was taken.
+        This is the water caves I went swimming in at samoa.
+        I love to swim and snorkel i find looking at fish very intresting.
    
 
      </strong>
