--- a/my-profile/photo6.html
+++ b/my-profile/photo6.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Photo 5</title>
+    <title>Photo 1</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -14,18 +14,14 @@
 
     </nav>  
 
-    <h2 class="p1" > Photo 5: </h2> 
+    <h2 class="p1" > Photo 1: </h2> 
 
-    <img  class="images" src="images/image5.jpg">
+    <img  class="images" src="images/image13.jpg">
 
      <p class="p1">
      <strong>
-        This is the photo of the library.
-        I have chosen this photo beacause it 
-        repreasents the fact that I love to read. 
-        I have no idea when this photo was taken.
-   
-
+        Dancing is one of my hobbies I do an indian traditioanal 
+        dance called kathak i have been learning kathak for three years. 
      </strong>
     </p> 
 </body>
