--- a/my-profile/index.html
+++ b/my-profile/index.html
@@ -15,7 +15,7 @@
     <a href="index.html">Home</a>
     <a href="my-skills.html">My skills</a>
     <a href="my-hobbies.html">My hobbies</a>
-    <a href="contact.html">Contact Me</a>
+    
 </nav>  
 
 
@@ -25,7 +25,7 @@
       2024) </p1>
     <br>
     <br>
-    <p1 class="paragraph">Here are some things that I like:</p1>
+    <p1 class="paragraph">Here are some things to get to know about me:</p1>
 
     <div>
       <p id="picture">Click on a picture to find out more about it</p>
@@ -48,6 +48,10 @@
 
 
     </div>
+
+    
+
+
 
 
   </div>
