--- a/my-profile/photo5.html
+++ b/my-profile/photo5.html
@@ -11,7 +11,7 @@
         <a href="index.html">Home</a>
         <a href="my-skills.html">My skills</a>
         <a href="my-hobbies.html">My hobbies</a>
-        <a href="contact.html">Contact Me</a>
+        
 
     </nav>  
 
@@ -23,8 +23,8 @@
      <strong>
         This is the photo of the library.
         I have chosen this photo beacause it 
-        repreasents the fact that I love to read. 
-        I have no idea when this photo was taken.
+        represants the fact that I love to read. 
+       
    
 
      </strong>
