--- a/my-profile/index.html
+++ b/my-profile/index.html
@@ -29,19 +29,19 @@
 
     <div>
       <p id="picture">Click on a picture to find out more about it</p>
-      <a href="photo1.html" target="_blank">
+      <a href="photo1.html">
         <img class="image" src="images/image11.jpg" title="Me, my mother and my brother">
       </a>
-      <a href="photo2.html" target="_blank">
+      <a href="photo2.html" >
       <img class="image" src="images/image12.jpg" title="Me as a baby">
       </a>
-      <a href="photo3.html" target="_blank">
+      <a href="photo3.html">
       <img class="image" src="images/image3.jpg" title="ocean">
       </a>
-      <a href="photo4.html" target="_blank">
+      <a href="photo4.html" >
       <img class="image" src="images/image4.jpg" title="dog">
       </a>
-      <a href="photo5.html" target="_blank">
+      <a href="photo5.html">
         <img class="image" src="images/image5.jpg" title="library">
       </a>
       
