--- a/my-profile/photo4.html
+++ b/my-profile/photo4.html
@@ -21,7 +21,7 @@
      <p class="p1">
      <strong>
     This is a photo of a dog.
-    This shows that I like dogs they are my secod favourite animal after an owl.
+    This shows that I like dogs they are my second favourite animal after an owl.
     
 
      </strong>
