--- a/my-profile/my-hobbies.html
+++ b/my-profile/my-hobbies.html
@@ -31,17 +31,17 @@
 
     </div>
 
-    <a href="photo6.html" target="_blank">
+    <a href="photo6.html" >
         <img class="image" src="images/image13.jpg" title="Dance">
       </a>
-      <a href="photo7.html" target="_blank">
+      <a href="photo7.html">
         <img class="image" src="images/image14 (1).jpg" title="Rock climbing">
       </a>
-      <a href="photo8.html" target="_blank">
+      <a href="photo8.html">
         <img class="image" src="images/image 15.jpg" title="Water caves">
       </a>
 
-      <a href="photo9.html" target="_blank">
+      <a href="photo9.html" >
         <img class="image" src="images/image 16.jpg" title="mid hike 
         ">
       </a>
