--- a/my-profile/my-skills.html
+++ b/my-profile/my-skills.html
@@ -13,7 +13,7 @@
     <nav>    
         <a href="index.html">Home</a>
         <a href="my-skills.html">My skills</a>
-       
+        <a href="my-hobbies.html">My hobbies</a>
       
 
     </nav>  
